# fcn_torch_backend

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
include/fcn_segmentation_torch/: fcn_segmentation_torch.hpp
include/fcn_torch_backend/: config.hpp  fcn_torch_backend.hpp
script/: export_to_pt.py  fcn_segmentation.py
src/: fcn_segmentation_torch.cpp  fcn_torch_backend.cpp  main.cpp
test/: test_fcn_segmentation_torch.cpp  test_fcn_torch_backend.cpp
